testsuite/tests/rename/should_fail/T2490.hs
-- Trac #2490
module ShouldFail where

-- All these sections are illegal

f x = [ (`head` x, ())
      , (+ x, ())
      , ((), + x)
      , ((), + x, ())
      , ((), x +) ]
